Fixes #392 - makes the title card a lot more compact on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3905,10 +3905,16 @@ section.disqus
 
 @media screen and (max-width: 480px)
 {
-  .page,
+  .page, 
+  .page.current,
   .page header
   {
     margin-top: 0 !important;
+  }
+
+  .page header.tutorial h1 {
+     font-size: 18px !important;
+	 font-weight: 600 !important;	
   }
 
   header.main
@@ -3927,6 +3933,15 @@ section.disqus
   header.main h1
   {
     margin: .2em;
+  }
+
+  header.tutorial {
+    padding: 0em 0.9em;	
+  }
+
+  header.tutorial .browser_support {
+    margin: none !important;
+    padding: none !important;	
   }
 
   header.main nav ul li#features_show {
